# a2a-mcp-bridge

./: .gitignore  .gitleaks.toml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  secrets-scan.yml
docs/: WAKE-REMOTE-AGENT.md
docs/adr/: ADR-001-multi-session-concurrency.md  ADR-002-wake-intent-coupling.md  ADR-003-worktree-isolation-and-git-identity.md  ADR-004-session-identity-vs-queue.md  ADR-005-fire-and-wait-orchestration.md  ADR-006-distributed-agent-fleet.md  ADR-006.1-http-bus-facade.md  ADR-007-file-transfer-primitive.md  ADR-008-capability-centralization.md  ADR-009-facade-per-agent-auth.md  ADR-010-intent-in-wake-payload.md
docs/guides/: deploy-remote-mac-client.md
docs/plans/: 2026-04-21-v0.1.md  2026-05-01-adr-007-option-a-file-transfer.md
docs/spec/: v0.1.md
examples/: hermes_agent_client.py
scripts/: bootstrap-agent-worktree.sh  migrate_registry_to_bus.py
src/a2a_mcp_bridge/: __init__.py  bus_store.py  cli.py  exceptions.py  facade.py  http_bus_store.py  intents.py  logging_ext.py  models.py  rate_limit.py  schema.sql  server.py  signals.py  store.py  tools.py  transfer_store.py  transfers.py  validation.py  wake.py
src/a2a_mcp_bridge/registry/: __init__.py  heartbeat.py  manager.py  models.py  query.py  storage.py
tests/: _facade_with_signal_dir.py  conftest.py  test_basic.py  test_bootstrap_agent_worktree.bats  test_bridge.py  test_bus_store.py  test_capabilities.py  test_capability_registry.py  test_cli.py  test_cli_register.py  test_cli_wake_registry.py  test_concurrency.py  test_facade.py  test_facade_integration.py  test_full_integration.py  test_inbox_peek.py  test_intent.py  test_logging.py  test_metadata_validation.py  test_migration.py  test_migrations.py  test_models.py  test_propagation.py  test_rate_limit.py  test_rate_limit_integration.py  test_realtime.py  test_register_capability_nonblocking.py  test_security_hardening.py  test_server.py  test_session_id.py  test_stale_wake_registry.py  test_store.py  test_store_edge_cases.py  test_tool_transfers.py  test_tools.py  test_transfer_dispatch.py  test_transfer_facade.py  test_transfer_store.py  test_transfer_tools.py  test_transfers.py  (+3 more)
tests/test_registry/: test_heartbeat.py  test_manager.py  test_models.py  test_query.py  test_storage.py
