[project]
name = "a2a-mcp-bridge"
version = "0.5.1"
description = "MCP server for agent-to-agent messaging — A2A-style peer-to-peer bus exposed as MCP tools"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "vlefebvre21", email = "usermail@gmail.com" }]
requires-python = ">=3.11"
keywords = ["mcp", "a2a", "ai-agents", "agent-to-agent", "llm", "inbox"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    # NOTE: v0.4+ overrides FastMCP.run_stdio_async in src/a2a_mcp_bridge/server.py
    # (class A2AMcp) to inject NotificationOptions(tools_changed=True). If the
    # upstream mcp SDK changes run_stdio_async in a major version, our override
    # will silently skip any new lifecycle hooks — so we cap at <2 until we
    # re-review the override against the new API.
    "mcp>=1.0,<2",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.0",
    # pyyaml is used by ``wake-registry init`` to parse Hermes profile
    # config.yaml files when discovering per-profile webhook ports/secrets.
    # Optional at runtime (the wake-up loop itself only reads the compiled
    # JSON registry), but a hard dep of the init CLI.
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
a2a-mcp-bridge = "a2a_mcp_bridge.cli:app"

[project.urls]
Homepage = "https://github.com/vlefebvre21/a2a-mcp-bridge"
Repository = "https://github.com/vlefebvre21/a2a-mcp-bridge"
Issues = "https://github.com/vlefebvre21/a2a-mcp-bridge/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a2a_mcp_bridge"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
